# sbi4cogsci

./: .gitignore  README.md  _quarto.yml  application.qmd  contact.qmd  index.qmd  organizers.qmd  schedule.qmd  styles.css  venue.qmd
.github/workflows/: publish.yaml
tutorials/: README.md  demo_single_trial_integrative_joint_modeling.ipynb  pyproject.toml
tutorials/day3_sbi_tools/: README.md  compare-models.ipynb  dmc-bayesflow.ipynb  lasenet_tutorial.ipynb  lasenet_tutorial_solution.ipynb
tutorials/day3_sbi_tools/bmc/: helpers.py
tutorials/day3_sbi_tools/dmc/: __init__.py  dmc_helpers.py  dmc_simulator.py
tutorials/day4_complex_joint/: demo_single_trial_integrative_joint_modeling.ipynb
